basic audio part

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_songs">Songs</string>
+    <string name="no_songs_found">NO SONGS FOUND</string>
+    <string name="music_title">Music Title</string>
 </resources>
