--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
 <resources>
     <string name="app_name">MediaPlayer</string>
-    <string name="title_home">Audio</string>
-    <string name="title_dashboard">Video</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_audio">Audio</string>
+    <string name="title_video">Video</string>
+    <string name="audio_image">Audio Image</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="video_player_name">Video Player</string>
+    <string name="media_title">Media Title</string>
+    <string name="_00_00">00:00</string>
+    <string name="song_title">Title of the song</string>
+    <string name="share_button">share_button</string>
+    <string name="big_song_image">big song image</string>
 </resources>
